--- a/Cyclistic.ipynb
+++ b/Cyclistic.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "<ul>\n",
-    "    <li> The director of marketing believes the company's future success depends on maximising the numer of annual memberships.</li>\n",
+    "    <li> The director of marketing believes the company's future success depends on maximising the number of annual memberships.</li>\n",
     "</ul>"
    ]
   },
